refactoring to extract configuration model